Primitívek használata streamekben